more improvments, fixes
